
=== Dependency update

- https://github.com/eclipse-sirius/sirius-components/issues/1377[#1377] [core] Switch to Java 17
- [backend] Switch to EMFJson 2.3.4

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-components/issues/1374[#1374] [layout] The border node position is now updated when its parents bounds has changed (e.g. when a node increases its size because of a child creation).
https://github.com/eclipse-sirius/sirius-components/issues/1580[#1580] [diagram] Border nodes do not return to their previous position after they have been moved manually

=== New Features

- https://github.com/eclipse-sirius/sirius-components/issues/1567[#1567] [project] Add support for project templates
- https://github.com/eclipse-sirius/sirius-components/issues/1456[#1456] [diagram] Add the ability to filter the edge created using some graphical variables
- https://github.com/eclipse-sirius/sirius-components/issues/1456[#1456] [view] Add a precondition expression to the edge description
- https://github.com/eclipse-sirius/sirius-components/issues/1463[#1463] [diagram] Add support for the direct edit of the start and end labels of an edge. Two new tools can be defined on an edge in order to specify how the begin and end labels can be edited.

image:doc/images/View_edit_begin_and_end_labels.png[width=491,height=285]

For each of those tools, `Edit Begin Label` and `Edit End Label` in the previous screenshot, the specifier can also enter an `Initial Direct Edit Label Expression` which will be used to compute the initial value of the label when the edition will be triggered.
This is mostly used to support the edition of computed labels.
The variables `semanticEdgeSource` and `semanticEdgeTarget` are now available both in the `Initial Direct Edit Label Expression` and while evaluating the behavior of the tools themselves.

image:doc/images/View_edit_begin_label_initial_expression.png[width=522,height=224]
